Set up ESLint with SARIF and GitHub Actions

--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -2,6 +2,11 @@ name: ESLint Code Analysis
 
 on: [push, pull_request]
 
+permissions:
+  actions: read
+  contents: read
+  security-events: write  # REQUIRED for upload-sarif to work
+  
 jobs:
   eslint:
     runs-on: ubuntu-latest
